--- a/index.html
+++ b/index.html
@@ -3,112 +3,68 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CYBERDOOM 1 // AGENT</title>
+    <title>cyberdoom.rf.gd agentic</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&family=Share+Tech+Mono&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
     <style>
       :root {
-        --color-terminal-bg: #050a05;
-        --color-terminal-text: #00ff41;
-        --color-terminal-dim: #008f11;
-        --color-terminal-alert: #ff003c;
+        --font-sans: 'Inter', sans-serif;
+        --font-mono: 'JetBrains Mono', monospace;
       }
       
       body {
         margin: 0;
-        background-color: var(--color-terminal-bg);
-        color: var(--color-terminal-text);
-        font-family: 'Share Tech Mono', monospace;
+        background-color: #f3f4f6;
+        color: #111827;
+        font-family: var(--font-sans);
         overflow: hidden;
       }
 
       /* Custom Scrollbar */
       ::-webkit-scrollbar {
-        width: 8px;
-        height: 8px;
+        width: 6px;
+        height: 6px;
       }
       ::-webkit-scrollbar-track {
-        background: #001100; 
+        background: transparent; 
       }
       ::-webkit-scrollbar-thumb {
-        background: #003300; 
-        border: 1px solid #00ff41;
+        background: #cbd5e1; 
+        border-radius: 10px;
       }
       ::-webkit-scrollbar-thumb:hover {
-        background: #005500; 
+        background: #94a3b8; 
       }
 
-      /* CRT Scanline Effect */
-      .scanlines {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100vw;
-        height: 100vh;
-        background: linear-gradient(
-          to bottom,
-          rgba(255,255,255,0),
-          rgba(255,255,255,0) 50%,
-          rgba(0,0,0,0.2) 50%,
-          rgba(0,0,0,0.2)
-        );
-        background-size: 100% 4px;
-        pointer-events: none;
-        z-index: 50;
-        animation: scroll 60s linear infinite;
+      .glass-panel {
+        background: rgba(255, 255, 255, 0.95);
+        backdrop-filter: blur(10px);
+        border: 1px solid rgba(255, 255, 255, 0.2);
+        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.05);
       }
 
-      .glow {
-        text-shadow: 0 0 5px var(--color-terminal-text);
-      }
-      
-      .alert-glow {
-        text-shadow: 0 0 5px var(--color-terminal-alert);
-      }
-
-      @keyframes scroll {
-        0% { background-position: 0 0; }
-        100% { background-position: 0 100%; }
-      }
-
-      /* CRT Flicker */
-      .flicker {
-        animation: flicker 0.15s infinite;
-        pointer-events: none;
-        position: fixed;
-        top: 0;
-        left: 0;
-        bottom: 0;
-        right: 0;
-        background: rgba(0, 255, 65, 0.02);
-        opacity: 0;
-        z-index: 49;
-      }
-
-      @keyframes flicker {
-        0% { opacity: 0.02; }
-        50% { opacity: 0.05; }
-        100% { opacity: 0.02; }
+      .editor-glass {
+        background: #1e1e1e;
+        color: #d4d4d4;
       }
     </style>
-  <script type="importmap">
+    <script type="importmap">
 {
   "imports": {
     "@google/genai": "https://esm.sh/@google/genai@^1.38.0",
     "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
     "react-markdown": "https://esm.sh/react-markdown@^10.1.0",
-    "react/": "https://esm.sh/react@^19.2.4/",
     "react": "https://esm.sh/react@^19.2.4",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.4/"
+    "react-dom/client": "https://esm.sh/react-dom@^19.2.4/client",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
+    "react/": "https://esm.sh/react@^19.2.4/"
   }
 }
 </script>
-</head>
+  </head>
   <body>
     <div id="root"></div>
-    <div class="scanlines"></div>
-    <div class="flicker"></div>
   </body>
 </html>
